# vss-gui-tool

./: .bazelrc  .gitignore  .gitmodules  BUILD  MODULE.bazel  Python-License.txt  README.md
.devcontainer/: devcontainer.json  prepare_workspace.h  prepare_workspace.sh
container/: README.md  build.sh  vss_gui.dockerfile
docs/: conf.py  index.rst
docs/_override_assets/css/: custom.css
docs/vss_gui_tool/: 10_introduction.rst
documentation/: 10_introduction.md  20_steps.md  30_openpoints.md
scripts/: vss
scripts/gui/: vspec_app.py  vss_gui.py
