# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

module(
    name = "auto_api_framework",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)

# Python 3.12: Required for testing infrastructure and code generation tools
PYTHON_VERSION = "3.12"

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
    dev_dependency = True,
)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)

#docs-as-code
bazel_dep(name = "score_docs_as_code", version = "3.0.1", dev_dependency = True)
